--- a/jxf/src/main/webapp/css/static.css
+++ b/jxf/src/main/webapp/css/static.css
@@ -16,6 +16,13 @@
 		height: 46px;
 		background: url(../img/logo_big.png);
 	}
+	
+	#titlebar #logotext {
+		position: absolute; top: 64px; z-index: 5;
+		display: block;
+		width: 170px;
+		height: 46px;
+	}
 
 	#titlebar #top {
 		position: absolute; right: 0; top: 30px; z-index: 5;
